# calc

./: .gitignore  Makefile  README.md  pyproject.toml
calc/: main.py
tests/: test_calc.py
