[project]
name = "calc"
version = "2026.6.8.4"
description = "Commandline calculator utility with basic python math and statistics functions."
readme = "README.md"
authors = [{name = "Travis L. Seymour, PhD", email = "nogard@ucsc.edu"}]
requires-python = ">=3.12,<3.14"
license = {text = "GPLv3"}
dependencies = [
    "simpleeval",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["ruff>=0.4", "pytest>=8.0"]

[project.urls]
"Bug Tracker" = "https://github.com/travisseymour/calc/issues"
"Documentation" = "https://github.com/travisseymour/calc#readme"

[project.scripts]
calc = "calc.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["calc"]

[tool.hatch.build.targets.wheel.force-include]
"calc/resources" = "calc/resources"

[dependency-groups]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true